simple refactoring